fix header overlap in-page anchors with scroll padding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,6 +205,8 @@ pre {
 html,
 body {
   height: 100%;
+  /* fix page header overlap in-page anchors */
+  scroll-padding-top: 66px;
 }
 
 body {
@@ -1242,14 +1244,6 @@ Subscription form
 
 .section-nav a {
   color: #cc3535;
-}
-
-/* fix page header overlap in-page anchors */
-:target::before {
-  content: "";
-  display: block;
-  height: 60px; /* fixed header height*/
-  margin: -60px 0 0; /* negative fixed header height */
 }
 
 /* related posts */
